# TicketHandoff

./: .gitignore  package-lock.json  package.json
assets/templates/: access-permissions.json  app-crash.json  network-vpn.json
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_security.sql
src-tauri/src/: db.rs  error.rs  keychain.rs  lib.rs  models.rs
src-tauri/src/commands/: escalations.rs  llm.rs  mod.rs  settings.rs  templates.rs  tickets.rs
src-tauri/src/services/: jira.rs  mod.rs  ollama.rs  retry.rs  template_engine.rs  ticket_system.rs
src/components/: ChecklistUI.tsx  ConfidenceBadge.tsx  MarkdownPreview.tsx  ReviewModal.tsx  TemplateSelector.tsx  Toast.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useEscalations.ts  useLLMSummary.ts  useTemplates.ts  useTicketData.ts
src/lib/: tauri.ts
src/pages/: History.tsx  Home.tsx  NewEscalation.tsx  Settings.tsx
