[package]
name = "ticket-handoff"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
handlebars = "6.4"
regex = "1"
thiserror = "2"
once_cell = "1"
base64 = "0.22"
async-trait = "0.1"
chrono = "0.4"
security-framework = "2.11"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio-retry = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
pulldown-cmark = "0.12"
rand = "0.8"
log = "0.4"

